# win-utils

./: Cargo.toml  README.md
perf-util/: Cargo.toml
perf-util/src/: main.rs
sensors/: Cargo.toml
sensors/src/: lib.rs  pdhmsg.rs
service/: Cargo.toml
service/src/: lib.rs
win-prom-node-exporter/: Cargo.toml
win-prom-node-exporter/src/: binding.rs  main.rs  perf_paths.rs
winapi-perf-wrapper/: Cargo.toml
winapi-perf-wrapper/src/: constants.rs  lib.rs
