[package]
name = "perf-util"
version = "0.1.0"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi-perf-wrapper = { path="../winapi-perf-wrapper" }
winapi = {version = "^0.3.8", features = ["winbase"]}
docopt = "^1.1.0"
anyhow = "1"