[package]
name = "win-prom-node-exporter"
version = "0.1.0"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi-perf-wrapper = { path="../winapi-perf-wrapper" }
windows-service = "^0.3.0"
anyhow = "1"
gflags = "^0.3"
log = "0.4"
prometheus = "^0.9.0"
stderrlog = "0.4"
tiny_http = "^0.7.0"
crossbeam-utils ="^0.7.2"